syntax = "proto3";

package ru.hse.lmsteam.proto.lessons;

option java_multiple_files = true;
option java_package = "ru.hse.lmsteam.schema.api.lessons";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "ru/hse/lmsteam/proto/common/pageable.proto";

message GetLesson {
  message Response {
    Lesson lesson = 1;
  }
}

message CreateOrUpdateLesson {
  message Request {
    string title = 1;
    int32 lesson_number = 2;
    google.protobuf.Timestamp publish_date = 3;

    // optional
    google.protobuf.StringValue description = 4;
    repeated string video_urls = 5;
    repeated string presentation_urls = 6;
  }

  message Response {
    Lesson lesson = 1;
  }
}

message GetLessons {
  message Response {
    ru.hse.lmsteam.proto.common.Page page = 1;
    repeated LessonSnippet lessons = 2;
  }
}

message DeleteLesson {
  message Response {
    int64 entities_deleted = 1;
  }
}

message Lesson {
  // required
  string id = 1;
  string title = 2;
  int32 lesson_number = 3;
  google.protobuf.Timestamp publish_date = 4;

  // optional
  google.protobuf.StringValue description = 5;
  repeated string video_urls = 6;
  repeated string presentation_urls = 7;

  repeated string homework_ids = 8;
  repeated string test_ids = 9;
}

message LessonSnippet {
  // required
  string id = 1;
  string title = 2;
  int32 lesson_number = 3;
  google.protobuf.Timestamp publish_date = 4;
}